# DataMining

parserITIS/: pyproject.toml  vk_parser.py
