[tool.poetry]
name = "parserITIS"
version = "0.1.0"
description = ""
authors = ["Mansur Nurgaleev <mansur0158@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
